--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
           proxy.golang.org:443
           storage.googleapis.com:443
           uploads.github.com:443
+          raw.githubusercontent.com:443
     - name: Checkout
       uses: actions/checkout@629c2de402a417ea7690ca6ce3f33229e27606a5
     - name: Set up Go 
